service-front/web/src/stylesheets/_govuk-accordion.scss
/* ///////////////// Access code items ///////////////// */
.govuk-accordion {
  &__section{
      position: relative;
  }
  &__section-heading {
    .govuk-tag {
      position: absolute;
      top: govuk-spacing(3);
      right: govuk-spacing(0);
    }
  }

  .js-enabled &__icon {
    top: auto;
    bottom: govuk-spacing(4);
  }

  &__section-button {
    word-wrap: break-word;
    max-width: 500px;
  }
}

